ops/kubernetes/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: labralords-api
  labels:
    app: labralords-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labralords-api
  template:
    metadata:
      labels:
        app: labralords-api
    spec:
      containers:
      - name: labralords-api
        image: labralords.azurecr.io/labralords-api:v1.0.0-alpha
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: 150m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1024Mi
        securityContext:
          capabilities:
            drop:
              - all
            add: [ "NET_ADMIN" ]
          runAsUser: 10001
          runAsGroup: 10001
          readOnlyRootFilesystem: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      automountServiceAccountToken: false
      restartPolicy: Always
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
