ops/kubernetes/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: labralords-api-service
spec:
  selector:
    app: labralords-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
