ops/kubernetes/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labralords-api-ingress
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT,GET,PATCH,DELETE,POST,OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts:
      - api.labralords.com
    secretName: cloudflare-tls
  rules:
  - host: api.labralords.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: labralords-api-service
            port:
              number: 80
