ops/kubernetes/api/base/network-policy.yaml
# internet connect to api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-connect-api
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: labralords-api
  ingress:
  - from:
    - ipBlock:
        cidr: 172.24.0.0/20
  egress:
  - to:
    - ipBlock:
        cidr: 172.24.0.0/20
  policyTypes:
  - Ingress
  - Egress
